Fixed color picker menu display on mobile

--- a/style.css
+++ b/style.css
@@ -34,6 +34,17 @@
     border-bottom-right-radius: 10px;
 }
 
+#colorPicker {
+    width: 40px;
+    height: 25px;
+    background-color: darkgray;
+    border: 2px solid lightgray;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 .spacer {
     width: 5px;
     height: 30px;
